solving rtl issue on collapse and alert icons

--- a/scss/o-rtl.scss
+++ b/scss/o-rtl.scss
@@ -29,3 +29,13 @@
 .o-link-arrow::after {
   transform: rotate(180deg);
 }
+
+.accordion .card-header button::after,
+.accordion .card-header a::after {
+  right: 94%;
+}
+
+.alert .alert-icon::after,
+.alert-sm .alert-icon::after, {
+  right: 2%;
+}
